# ESP32

./: .gitignore  .gitmodules  LICENSE  README.md
01-HelloWorld/: 01-HelloWorld.ino  platformio.ini
01-HelloWorld/src/: main.cpp
02-DataLogger_InfluxDB/: platformio.ini
02-DataLogger_InfluxDB/include/: README  README.md
02-DataLogger_InfluxDB/src/: main.cpp
AccelerometerVisualization/: AccelerometerVisualization.ino
ConnectToWiFi/: ConnectToWiFi.sll  ConnectToWiFi.spj  platformio.ini
ConnectToWiFi/src/: display_mng.cpp  display_mng.h  main.cpp  main.h  ui.c  ui.h  (+1 more)
ControlDevicesMQTT/: .gitignore  ControlDevicesMQTT.sll  ControlDevicesMQTT.spj  platformio.ini
ControlDevicesMQTT/MQTT_Application/: .gitignore  CMakeLists.txt  main.cpp  main.qml  someclass.cpp  someclass.h
ESP-IDF/: .gitignore  ESP32-8048S043_README.md  README.md  tool_set_config.json
ESP-IDF/ESP32_Clock/main/: CMakeLists.txt  display_mng.h  gui_mng.c  gui_mng.h  idf_component.yml  main.c  main.h  sntp_time_sync.c  sntp_time_sync.h  xpt2046.h
ESP-IDF/ESP32_Clock/main/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP-IDF/ESP32_Clock/main/ui/components/: ui_comp_hook.c
ESP-IDF/ESP32_Clock/main/ui/images/: ui_img_bg_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_clockwise_sec_png.c  ui_img_sec_dot_png.c
ESP-IDF/ESP32_Clock/main/ui/screens/: ui_ClockScreen.c  ui_MainScreen.c
ESP-IDF/ESP32_CoffeeAnimation/main/: CMakeLists.txt  display_mng.h  gui_mng.c  gui_mng.h  main.c  xpt2046.c
ESP-IDF/ESP32_CoffeeAnimation/main/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP-IDF/ESP32_CoffeeAnimation/main/ui/components/: ui_comp_hook.c
ESP-IDF/ESP32_CoffeeAnimation/main/ui/images/: ui_img_coffee_f01_png.c  ui_img_coffee_f02_png.c  ui_img_coffee_f03_png.c  ui_img_coffee_f04_png.c  ui_img_coffee_f05_png.c  ui_img_coffee_f06_png.c  ui_img_coffee_f07_png.c  ui_img_coffee_f08_png.c  ui_img_coffee_f09_png.c  ui_img_coffee_f10_png.c  ui_img_coffee_f11_png.c  ui_img_coffee_f12_png.c  ui_img_coffee_f13_png.c  ui_img_coffee_f14_png.c  ui_img_coffee_f15_png.c  ui_img_coffee_f16_png.c  ui_img_coffee_f17_png.c  ui_img_coffee_f18_png.c  ui_img_coffee_f19_png.c  ui_img_coffee_f20_png.c  ui_img_coffee_f21_png.c  ui_img_coffee_f22_png.c  ui_img_coffee_f23_png.c  ui_img_coffee_f24_png.c  ui_img_coffee_f25_png.c  ui_img_coffee_f26_png.c  ui_img_coffee_f27_png.c  ui_img_coffee_f28_png.c  ui_img_coffee_f29_png.c  ui_img_coffee_f30_png.c  ui_img_coffee_f31_png.c
ESP-IDF/ESP32_CoffeeAnimation/main/ui/screens/: ui_MainScreen.c
ESP-IDF/ESP32_MQTT/main/: CMakeLists.txt  gui_mng.h  gui_mng_cfg.c  gui_mng_cfg.h  ili9341.c  main.c  main.h
ESP-IDF/ESP32_MQTT/main/ui/: ui.c  ui.h  ui_helpers.h
ESP-IDF/ESP32_MQTT/main/ui/screens/: ui_Dashboard.c  ui_MainScreen.c
ESP-IDF/ESP32_TrafficController/main/: CMakeLists.txt  app_nvs.c  app_nvs.h  gui_mng.c  gui_mng_cfg.c  gui_mng_cfg.h  http_server.c  http_server.h  idf_component.yml  main.c  main.h  mqtt_app.c  mqtt_app.h  wifi_app.c  wifi_app.h
ESP-IDF/ESP32_TrafficController/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP-IDF/ESP32_TrafficController/main/ui/components/: ui_comp_hook.c
ESP-IDF/ESP32_TrafficController/main/ui/fonts/: ui_font_DsDigital72.c
ESP-IDF/ESP32_TrafficController/main/ui/images/: ui_img_1402433841.c  ui_img_338993590.c  ui_img_school_logo_png.c
ESP-IDF/ESP32_TrafficController/main/ui/screens/: ui_MainScreen.c  ui_Panel1.c  ui_Panel2.c  ui_Panel3.c  ui_Panel4.c
ESP-IDF/ESP32_TrafficController/main/webpage/: app.css  app.js  index.html
ESP-IDF/LVGL_TemperatureHumidity/main/: CMakeLists.txt  dht11.c  dht11.h  display_mng.c  gui_mng.c  gui_mng.h  idf_component.yml  main.c  main.h  tft.c  tft.h  thingspeak.c  thingspeak.h
ESP-IDF/LVGL_TemperatureHumidity/main/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP-IDF/LVGL_TemperatureHumidity/main/ui/components/: ui_comp_hook.c
ESP-IDF/LVGL_TemperatureHumidity/main/ui/fonts/: ui_font_mangal18.c  ui_font_mangal24.c
ESP-IDF/LVGL_TemperatureHumidity/main/ui/screens/: ui_MainScreen.c
ESP-IDF/OpenWeatherMap/main/: CMakeLists.txt  display_mng.c  display_mng.h  idf_component.yml  main.c  main.h  openweathermap.c  openweathermap.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP-IDF/OpenWeatherMap/main/GUI/: .gitignore  OpenWeatherMap.sll  OpenWeatherMap.spj
ESP-IDF/OpenWeatherMap/main/images/: ui_img_delhi_png.c  ui_img_jaipur_png.c  ui_img_leh_png.c  ui_img_shimla_png.c
ESP-IDF/OpenWeatherMap/main/screens/: ui_Delhi.c  ui_Jaipur.c  ui_Leh.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Shimla.c
ESP-IDF/S3_VotingMachine/main/: CMakeLists.txt  Kconfig.projbuild  S3_VotingMachine.cppcheck  gui_mng.c  gui_mng.h  gui_mng_cfg.c  gui_mng_cfg.h  idf_component.yml  main.c  main.h  sd_mng.c  sd_mng.h
ESP-IDF/S3_VotingMachine/main/ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP-IDF/S3_VotingMachine/main/ui/images/: ui_img_aap_png.c  ui_img_bjp_png.c  ui_img_bsp_png.c  ui_img_congress_png.c  ui_img_cpi_png.c  ui_img_jdu_png.c  ui_img_na_png.c  ui_img_ncp_png.c  ui_img_sp_png.c  ui_img_tmc_png.c
ESP-IDF/S3_VotingMachine/main/ui/screens/: ui_MainScreen.c  ui_ResultsBarScreen.c
ESP-IDF/WeatherStationServer/main/: .cproject  CMakeLists.txt  app_nvs.c  app_nvs.h  dht11.c  dht11.h  http_server.c  http_server.h  idf_component.yml  led_mng.c  led_mng.h  main.c  main.h  prj_refs.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
ESP-IDF/WeatherStationServer/main/webpage/: app.css  app.js  index.html
LVGL_HelloWorld/: LVGL_HelloWorld.ino
LVGL_ImageSlider/: LVGL_ImageSlider.sll  LVGL_ImageSlider.spj  platformio.ini
Support/: ESP32_DHT11_GPIO19.fzz  ESP32_MPU6050.fzz  Home Data Logger.json  esp32_influxdb_logger.json
Temperature_Humidity_Graph/: DHT11_ILI9341_SPI_ESP32_Schematic.fzz  PinOut.xlsx  Schematic.fzz  platformio.ini
(+223 files in other folders)
