idf_component_register( SRCS 
												main.c
												display_mng.c
												ili9341.c
												xpt2046.c
												tft.c
												gui_mng.c
												gui_mng_cfg.c
												ui/ui.c
    										ui/screens/ui_MainScreen.c
    										ui/screens/ui_Dashboard.c
												INCLUDE_DIRS 
												"."
												"ui"
												)
