SET(SOURCES screens/ui_MainScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_coffee_f01_png.c
    images/ui_img_coffee_f02_png.c
    images/ui_img_coffee_f03_png.c
    images/ui_img_coffee_f04_png.c
    images/ui_img_coffee_f05_png.c
    images/ui_img_coffee_f06_png.c
    images/ui_img_coffee_f07_png.c
    images/ui_img_coffee_f08_png.c
    images/ui_img_coffee_f09_png.c
    images/ui_img_coffee_f10_png.c
    images/ui_img_coffee_f11_png.c
    images/ui_img_coffee_f12_png.c
    images/ui_img_coffee_f13_png.c
    images/ui_img_coffee_f14_png.c
    images/ui_img_coffee_f15_png.c
    images/ui_img_coffee_f16_png.c
    images/ui_img_coffee_f17_png.c
    images/ui_img_coffee_f18_png.c
    images/ui_img_coffee_f19_png.c
    images/ui_img_coffee_f20_png.c
    images/ui_img_coffee_f21_png.c
    images/ui_img_coffee_f22_png.c
    images/ui_img_coffee_f23_png.c
    images/ui_img_coffee_f24_png.c
    images/ui_img_coffee_f25_png.c
    images/ui_img_coffee_f26_png.c
    images/ui_img_coffee_f27_png.c
    images/ui_img_coffee_f28_png.c
    images/ui_img_coffee_f29_png.c
    images/ui_img_coffee_f30_png.c
    images/ui_img_coffee_f31_png.c)

add_library(ui ${SOURCES})
